--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <meta property="og:type" content="website">
         <meta property="og:url" content="https://pooka.opensrc.club/index.html">
         <meta property="og:image" content="https://pooka.opensrc.club/images/doors.jpg">
-		<meta property="og:description" content="Pooka's webpage, nothing more, nothing less.">
+        <meta property="og:description" content="Pooka's webpage, nothing more, nothing less.">
         <meta property="og:site_name" content="Pooka's Doors">
         <title>Pooka's Doors</title>
         <link rel="stylesheet" href="style.css">
@@ -21,6 +21,9 @@
         <hr>
         <p>Welcome to my realm. Click on any of the links below to navigate my views.</p>
         <ul>
+            <li>
+                <a href="manuals_rant.html">The Disappearance of Digital Manuals</a><img src="images/new.png" width="31" height="12" alt="(NEW)">
+            </li>
             <li>
                 <a href="steam_misconceptions.html">Common Misconceptions about Steam</a>
             </li>
@@ -36,7 +39,7 @@
         </ul>
         <footer class="mini">
             <hr>
-            Copyright Pooka, 2019. All rights reserved.
+            Copyright Pooka, 2019-2022. All rights reserved.
             <br>
             I disown the image
         </footer>
