build 254f6e07aa909d69caee08e03fd015cd2c6cab81

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
         <p>Welcome to my realm. Click on any of the links below to navigate my views.</p>
         <ul>
             <li>
-                <a href="/manuals_rant.html">The Disappearance of Digital Manuals</a><img src="/images/new.png" width="31" height="12" alt="(NEW)">
+                <a href="/cortex_gapless.html">The Wrath of Cortex but without gaps</a><img src="/images/new.png" width="31" height="12" alt="(NEW)">
             </li>
             <li>
-                <a href="/steam_misconceptions.html">Common Misconceptions about Steam</a>
+                <a href="/manuals_rant.html">The Disappearance of Digital Manuals</a>
             </li>
             <li>
                 This space is left blank
