--- a/cortex_gapless.html
+++ b/cortex_gapless.html
@@ -27,8 +27,8 @@
 <p>And it&rsquo;s not like the tracks have an excuse for that silence, since most of them end abruptly. It&rsquo;s just there in all the tracks. But here&rsquo;s the thing: it&rsquo;s there in all <em>except one track</em>. If you pay attention to the Medieval Madness music, you&rsquo;ll realize that it doesn&rsquo;t ever get quiet. It&rsquo;s the only track in the whole game that has gapless loops, and it&rsquo;s also a PS2 exclusive track for an unknown reason.</p>
 <p>To investigate this whole mess, I downloaded the music files, ripped straight from the game itself and without any conversion from the JoshW website. All the files we care about are encoded in Sony&rsquo;s VAGp format (.vag file extension), used for the PS1, PS2 and PS3. Worth noting each music track includes two files, one for the left channel and one for the right, with the name of the track taking 7 characters while the 8<sup>th</sup> character represents the channel – for example, Arctic Antics has two files: arctical.vag and arcticar.vag. These files are all extracted from one file on the game disc called SFX.DAT. The benefit of having the music in the format used by the game is that the vgmstream plugin for foobar2000 can play them back, and it can be tossed into a hex editor for study.</p>
 <p>Now, by hex editing the Medieval Madness tracks (gauntl2l.vag and gauntl2r.vag) and comparing it with any other track, we can see why MM is special. By setting the editor to display 16 bytes per row, the track for Arctic Antics has several rows of the 0C byte followed by 15 bytes of 00, right off the bat at address 00000040. Medieval Madness on the other hand doesn&rsquo;t have any 0C byte rows. It just gets into the music data immediately.</p>
-<ul style="display:flex;flex-wrap:wrap;justify-content:space-around;justify-content:space-evenly;padding:0;overflow:auto">
-<li style="display:block;text-align:center">
+<ul style="display:flex;flex-wrap:wrap;justify-content:space-around;justify-content:space-evenly;padding:0">
+<li style="display:block;text-align:center;overflow:auto">
 artical.vag hexdump
 <pre><code>00000000  56 41 47 70 00 00 00 20  00 00 00 00 00 2f 2c 60  |VAGp... ...../,`|
 00000010  00 00 ac 44 00 00 00 00  00 00 00 00 00 00 00 00  |...D............|
@@ -55,7 +55,7 @@ artical.vag hexdump
 002f2c70  14 01 32 03 4b bf fc ff  d2 02 00 00 00 00 00 00  |..2.K...........|
 002f2c80  14 07 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
 002f2c90                                                                      </code></pre></li>
-<li style="display:block;text-align:center">
+<li style="display:block;text-align:center;overflow:auto">
 gauntl2l.vag hexdump
 <pre><code>00000000  56 41 47 70 00 00 00 20  00 00 00 00 00 2d d3 50  |VAGp... .....-.P|
 00000010  00 00 ac 44 00 00 00 00  00 00 00 00 00 00 00 00  |...D............|
